fix bottom card action buttons visibility on mobile and remove space from the bottom of the pictures carousel displaying the images block.

--- a/styles/css/imagePicker.css
+++ b/styles/css/imagePicker.css
@@ -13,7 +13,7 @@
 }
 .images-container .md-card-image > img {
     width: 100%;
-    height: 100%;
+    display: block;
 }
 .images-container .md-card-image {
     transition: all 0.35s;
@@ -25,7 +25,7 @@
     opacity: 0.6;
 }
 .images-container {
-    margin: 0 auto;
+    margin: 10px auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
